# haskellpoker

./: CHANGELOG.md  README.md  haskellpoker.cabal  poker.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Poker.hs
src/Poker/: Math.hs
