cabal-version:      2.4
name:               haskellpoker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             torstenzuther
maintainer:         torsten.zuther@web.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskellpoker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Poker Poker.Math

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   app src
    default-language: Haskell2010
